# external_data_bazel

./: .gitignore  BUILD.bazel  DESIGN.md  LICENSE.TXT  README.md  WORKFLOWS.md  WORKSPACE  requirements.txt  run_tests.sh
config/: external_data.user.yml  girder.repo.conf  girder.user.conf  project.bazel_external_data.yml  project.conf  project.external_data_bazel.yml  user.bazel_external_data.yml  user.conf  user.external_data_bazel.yml
docs/: DESIGN.md  README.md  design.md  setup.md  testing.md  workflows.md
docs/config/: external_data.package.yml  external_data.project.yml  external_data.user.yml
docs/setup/: girder_setup.sh
src/bazel_external_data/: BUILD.bazel  backends.py  base.py  check.py  cli.py  config_helpers.py  core.py  download.py  upload.py  util.py
src/bazel_external_data/backends/: BUILD.bazel  __init__.py  girder.py  mock.py
src/external_data_bazel/: BUILD.bazel  backends.py  base.py  check.py  cli.py  config_helpers.py  core.py  download.py  hashes.py  upload.py  util.py
src/external_data_bazel/backends/: BUILD.bazel  __init__.py  general.py  girder.py  mock.py
src/test/: BUILD.bazel  bazel_external_data_config.py  bazel_external_data_repo_config.py
test/: .bazel_external_data.yml  BUILD.bazel  WORKSPACE  basic_workflows_test.sh  bazel_external_data_config.py  run_tests.sh  test_basics.py  test_workflows.sh
test/backends/girder/: run_tests.sh  setup_client.py  setup_client.sh  setup_server.sh  setup_server.yml  test_client.sh
test/backends/girder/bazel_pkg_girder_test/: .external_data.project.yml  .external_data.yml  BUILD.bazel  WORKSPACE
test/backends/girder/bazel_pkg_girder_test/data/: BUILD.bazel  master.bin.sha512
test/backends/girder/bazel_pkg_girder_test/test/: BUILD.bazel  test_basics.sh
test/backends/girder/bazel_pkg_girder_test/tools/: external_data  external_data.bzl  external_data.user.yml
test/backends/girder/docker/: Dockerfile.girder-dev
test/bazel_pkg_advanced_test/: .external_data.project.yml  .external_data.yml  BUILD.bazel  WORKSPACE  test_basics.py
test/bazel_pkg_advanced_test/data/: BUILD.bazel
test/bazel_pkg_advanced_test/data/package_overlay/: .external_data.yml
test/bazel_pkg_advanced_test/tools/: external_data  external_data.bzl  external_data_config.py
test/bazel_pkg_downstream_test/: WORKSPACE  test_basics.py
test/bazel_pkg_test/: .external_data.project.yml  .external_data.yml  BUILD.bazel  WORKSPACE  test_basics.py
test/bazel_pkg_test/tools/: external_data
test/cmake_pkg_test/: .gitignore  faux_download.sh
test/data/: .bazel_external_data.yml  BUILD.bazel  sync_sha.sh
test/data/package/: .bazel_external_data.yml
test/data/scope/: .bazel_external_data.yml
test/data/scope_overlay/: .bazel_external_data.yml
test/data/subproject/: .bazel_external_data.yml
test/test_cmake/: CMakeLists.txt  run_test.sh  test_basics.py
test/test_mock/: WORKSPACE
test/test_mock/data/: .external_data.yml
test/test_mock/tools/: BUILD.bazel
test/test_simple/: BUILD.bazel  WORKSPACE
test/test_simple_downstream/: WORKSPACE  test_basics.py
test/tools/: BUILD.bazel  bazel_external_data_config.py  external_data.bzl
test_cmake/: CMakeLists.txt  external_data_bazel.cmake  test_basics.py
test_mock/: .bazel_external_data.yml  .external_data.project.yml  .external_data.yml  BUILD.bazel  WORKSPACE  test_basics.py
test_mock/data/: .bazel_external_data.yml  .external_data.yml  BUILD.bazel  direct.bin.remote.yml  direct.bin.sha512
test_mock/data/package/: .bazel_external_data.yml  .external_data.yml  basic.bin.sha512
test_mock/data/package_overlay/: .bazel_external_data.yml  .external_data.yml
test_mock/tools/: BUILD.bazel  bazel_external_data_config.py  download  external_data  external_data.bzl  external_data.user.yml  external_data_config.py  path.bzl  upload
test_simple/: .bazel_external_data.yml  .external_data.project.yml  .external_data.yml  BUILD.bazel  WORKSPACE  test_basics.py
test_simple/data/: BUILD.bazel
test_simple/tools/: BUILD.bazel  bazel_external_data_config.py  external_data.bzl
test_simple_downstream/: BUILD.bazel  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-test_simple_downstream  bazel-testlogs  test_basics.py
test_workflow/: BUILD.bazel  test_mock  test_workflows.sh
tools/: macros.bzl
