package(default_visibility = ["//visibility:public"])

alias(
    name = "core",
    actual = "//src/external_data_bazel:core",
)

py_binary(
    name = "cli",
    srcs = [
        "//src/external_data_bazel:cli.py",
    ],
    deps = [
        "//src/external_data_bazel:core",
        "//src/external_data_bazel:cli_base",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workflow_mock",
    srcs = [
        "src",
        "tools",
        "test_mock",
        "WORKSPACE",
        "BUILD.bazel"
    ],
    visibility = ["//test_workflow:__subpackages__"],
)
