package(default_visibility = ["//visibility:public"])

alias(
    name = "core",
    actual = "//src/external_data_bazel:core",
)

alias(
    name = "cli.py",
    actual = "//src/external_data_bazel:cli.py",
)

py_library(
    name = "cli_deps",
    deps = [
        "//src/external_data_bazel:core",
        "//src/external_data_bazel:cli_base",
    ],
)

py_binary(
    name = "cli",
    srcs = [
        "//src/external_data_bazel:cli.py",
    ],
    deps = [
        ":cli_deps",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workflow_mock",
    srcs = [
        "src",
        "tools",
        "//test:bazel_pkg_advanced_test",
        "WORKSPACE",
        "BUILD.bazel"
    ],
    visibility = ["//test:__subpackages__"],
)
