package(default_visibility = ["//visibility:public"])

alias(
    name = "core",
    actual = "//src/external_data_bazel:core",
)

alias(
    name = "cli.py",
    actual = "//src/external_data_bazel:cli.py",
)

py_library(
    name = "cli_deps",
    deps = [
        "//src/external_data_bazel:core",
        "//src/external_data_bazel:cli_base",
    ],
)

py_binary(
    name = "cli",
    srcs = [
        "//src/external_data_bazel:cli.py",
    ],
    deps = [
        ":cli_deps",
    ],
    visibility = ["//visibility:public"],
)

# Expose this package's main bits to be consumed via a test.
filegroup(
    name = "pkg_data",
    srcs = [
        "src",
        "tools",
        "WORKSPACE",
        "BUILD.bazel"
    ],
    visibility = ["//test:__subpackages__"],
)
