filegroup(
    name = 'sentinel',
    srcs = [':.custom-sentinel'],
    visibility=["//visibility:public"],
)

py_test(
    name = "test_basics",
    srcs = ["test_basics.py"],
    deps = [
        "@bazel_external_data//src/bazel_external_data:util",
    ],
    data = [
        "//test/data",
        "mock",
    ],
    size = "small",
    visibility = ["//visibility:public"],
)
