filegroup(
    name = 'sentinel',
    srcs = [':.custom-sentinel'],
    visibility=["//visibility:public"],
)

py_test(
    name = "test_basics",
    srcs = ["test_basics.py"],
    deps = [
        "@org_drake_bazel_external_data//src/bazel_external_data:util",
    ],
    data = [
        "//data",
        "mock",
    ],
    size = "small",
    visibility = ["//visibility:public"],
)
