filegroup(
    name = 'sentinel',
    srcs = [
        ':.external_data.project.yml',
    ],
    visibility=["//visibility:public"],
)

py_test(
    name = "test_basics",
    srcs = ["test_basics.py"],
    deps = [
        "@org_drake_bazel_external_data//:base",
    ],
    data = [
        "//data",
        "mock",
    ],
    size = "small",
    visibility = ["//visibility:public"],
)
