filegroup(
    name = "external_data_sentinel",
    srcs = [
        ":.external_data.project.yml",
        "//tools:bazel_external_data_config.py",
        "//tools:external_data.user.yml",
    ],
    visibility=["//visibility:public"],
)

py_test(
    name = "test_basics",
    srcs = ["test_basics.py"],
    deps = [
        "@org_drake_bazel_external_data//:base",
    ],
    data = [
        "//data",
        "mock",  # Directory.
    ],
    size = "small",
    visibility = ["//visibility:public"],
)
