load("//tools:external_data.bzl",
    "enable_external_data",
)

enable_external_data(None)

filegroup(
    name = "external_data_sentinel",
    srcs = [":.external_data.project.yml"],
    visibility=["//visibility:public"],
)

py_test(
    name = "test_basics",
    srcs = ["test_basics.py"],
    deps = [
        "@external_data_bazel_pkg//:core",
    ],
    data = [
        "//data",
        "mock",  # Directory.
    ],
    size = "small",
    visibility = ["//visibility:public"],
)
