py_library(
    name = "base",
    srcs = [
        "backends.py",
        "config_helpers.py",
        "base.py",
        "util.py",
    ],
    imports = [".."],
    visibility=["//visibility:public"],
)

# TODO: Combine these in some sort of dispatch binary?
exports_files(
    srcs = [
        "download.py",
        "upload.py",
    ],
)
