py_library(
    name = "base",
    srcs = [
        "backends.py",
        "config_helpers.py",
        "base.py",
        "util.py",
    ],
    imports = [".."],
    visibility=["//visibility:public"],
)

# TODO: Combine these in some sort of dispatch binary?
py_binary(
    name = "download",
    srcs = ["download.py"],
    deps = [":base"],
    visibility=["//visibility:public"],
)

py_binary(
    name = "upload",
    srcs = ["upload.py"],
    deps = [":base"],
    visibility=["//visibility:public"],
)
