py_library(
    name = "base",
    srcs = [
        "backends.py",
        "config_helpers.py",
        "base.py",
        "util.py",
    ],
    imports = [".."],
    visibility=["//visibility:public"],
)

py_binary(
    name = "cli",
    srcs = [
        "cli.py",
        "download.py",
        "upload.py",
    ],
    deps = [":base"],
    visibility=["//visibility:public"],
)
