py_library(
    name = "core",
    srcs = [
        "backends.py",
        "config_helpers.py",
        "core.py",
        "util.py",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
)

py_library(
    name = "cli_base",
    srcs = [
        "download.py",
        "upload.py",
    ],
    deps = [
        ":core",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
)

# Declare 'cli' in //:, to permit easier access to the binary from external repos.
exports_files(
    srcs = ["cli.py"],
)

alias(
    name = "cli",
    actual = "//:cli",
)
