py_library(
    name = "core",
    srcs = [
        "config_helpers.py",
        "core.py",
        "util.py",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
)
# @note 'core' has NO backends actually present.
# This means that `core.load_project` will not work if no custom config is not used,
# if only `core` is consumed.

py_library(
    name = "cli_base",
    srcs = [
        "download.py",
        "upload.py",
    ],
    deps = [
        ":core",
        "//src/external_data_bazel/backends",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
)

# Declare 'cli' in //:, to permit easier access to the binary from external repos.
exports_files(
    srcs = ["cli.py"],
)

alias(
    name = "cli",
    actual = "//:cli",
)
