load("//test/tools:external_data.bzl",
    "external_data",
    "external_data_group",
    "get_original_files",
)

package(default_visibility = ["//visibility:public"])

external_data(
    file = "basic.bin",
)

external_data(
    file = "direct.bin",
    url = "https://gist.githubusercontent.com/EricCousineau-TRI/0f331573f686b741f5f70de0f91a8cc1/raw/2eb960a76ec56f8a8a68cf5473d93d7edf75d5ad/direct.bin",  # noqa
)

external_data_group(
    name = "glob",
    files = get_original_files(glob(['glob_*.bin.sha512'])),
)

external_data(
    file = "package/extra.bin",
)
# @note package/basic.bin is invalid, since it's in `master`, but this package does not overlay.
# In general, this may pass, as it's not cached.
# To fix this, add DEBUG_CHECK.

external_data_group(
    name = "package_overlay",
    files = get_original_files(glob(['package_overlay/*.bin.sha512'])),
)

filegroup(
    name = "data",
    srcs = [
        ":basic.bin",
        ":direct.bin",
        ":glob",
        ":package/extra.bin",
        ":package_overlay",
    ],
)
