filegroup(
    name = "external_data_sentinel",
    srcs = [':.external_data.project.yml'],
    visibility=["//visibility:public"],
)

py_test(
    name = "test_basics",
    srcs = ["test_basics.py"],
    data = [
        "//data",
    ],
    size = "small",
    visibility = ["//visibility:public"],
)
