py_library(
    name = "config",
    srcs = ["bazel_external_data_config.py"],
    imports = ["."],
    deps = [
        "@external_data//src/bazel_external_data:util",
    ],
    data = [
        "//:sentinel",
    ],
)

py_binary(
    name = "download",
    srcs = ["@external_data//src/bazel_external_data:download.py"],
    deps = [
        ":config",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "upload",
    srcs = ["@external_data//src/bazel_external_data:upload.py"],
    deps = [
        ":config",
    ],
)
