py_library(
    name = "config",
    srcs = ["bazel_external_data_config.py"],
    imports = ["."],
    deps = [
        "@org_drake_bazel_external_data//src/bazel_external_data:util",
    ],
    data = [
        "//:sentinel",
    ],
)

py_binary(
    name = "download",
    srcs = ["@org_drake_bazel_external_data//src/bazel_external_data:download.py"],
    deps = [
        ":config",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "upload",
    srcs = ["@org_drake_bazel_external_data//src/bazel_external_data:upload.py"],
    deps = [
        ":config",
    ],
)
