imports = ["../.."]

py_library(
    name = "core",
    srcs = [
        "__init__.py",
        "mock.py",
    ],
    deps = [
        "//src/external_data_bazel:core",
    ],
    imports = imports,
)

py_library(
    name = "girder",
    srcs = [
        "girder.py",
    ],
    deps = [
        ":core",
    ],
    imports = imports,
)

py_library(
    name = "backends",
    deps = [
        ":core",
        ":girder",
    ],
    imports = imports,
    visibility = ["//src/external_data_bazel:__subpackages__"],
)
